# GLSnake

./: .gitignore  Events.c  Events.h  Globals.h  Graphics.c  Graphics.h  InGame.c  InGame.h  Init.c  Makefile  Paused.c  Paused.h  README  README.md  Sound.c  background.tga  globals.h  gui.c  gui.h  hana.tga  ingame.c  ingame.h  main.c  meson.build  meson_options.txt  paused.c  paused.h  targa.c  targa.h  waveshader.c
include/: gameover.h  globals.h  gui.h  highscores.h  ingame.h  mainmenu.h  paused.h  targa.h  ttfonts.h
ini-parse/: main.c  map.c  map.h  parser.h
resources/textures/: background.tga  exit.tga  logo.tga  scores.tga  start.tga
src/: gameover.c  gui.c  highscores.c  ingame.c  main.c  mainmenu.c  meson.build  paused.c  targa.c  targa.c~  ttfonts.c  waveshader.c
